src/main/java/com/example/demo/error/AccountNotFoundException.java
package com.example.demo.error;

public class AccountNotFoundException extends Exception {
}
